syntax = "proto3";

option csharp_namespace = "Submission.Grpc";

package submission;

service ArticleQueryService {
    rpc GetArticleDetails (GetArticleRequest) returns (ArticleDetailsResponse);
}

message GetArticleRequest {
    string articleId = 1;
}

message ArticleDetailsResponse {
    string articleId = 1;
    string title = 2;
    string author = 3;
    string submissionDate = 4;
    string status = 5;
}
